--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: minima
-title: title
-author: author
-description: description
+title: Marcin Burak blog
+author: Marcin Burak
+description: Follow my personal developer journey.
